--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -788,7 +788,7 @@ textarea.form-control {
 .IRIMAKI-nav .main-nav .others-option .menu-btn.contact-number {
     font-weight: 600;
     font-size: 16px;
-    color: #fff;
+    color: #7f675f;
     padding-right: 15px;
     padding-left: 5px;
     position: relative;
@@ -3082,7 +3082,7 @@ h2 span {
 }
 
 .IRIMAKI-nav .main-nav.IRIMAKI-nav-style-three.IRIMAKI-nav-style-three::before {
-    background-color: #15171a;
+    background-color: beige;
     opacity: 1
 }
 
@@ -3100,7 +3100,7 @@ h2 span {
 }
 
 .IRIMAKI-nav .main-nav.IRIMAKI-nav-style-three.IRIMAKI-nav-style-three .is-sticky {
-    background-color: #15171a
+    background-color: beige
 }
 
 .IRIMAKI-nav .main-nav.IRIMAKI-nav-style-three.IRIMAKI-nav-style-three .others-option {
